<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="24dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_unit_hour"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="13sp" />

        <NumberPicker
            android:id="@+id/picker_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="?attr/colorControlActivated" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_unit_minute"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="13sp" />

        <NumberPicker
            android:id="@+id/picker_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_unit_second"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="13sp" />

        <NumberPicker
            android:id="@+id/picker_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
